Alternate stylesheets are not present in document.styleSheets https://bugs.webkit.org/show_bug.cgi?id=56932

Reviewed by Cameron McCormack.

Align the behavior of WebKit with the spec and that of other browsers by always enumerating list of
stylesheets regardless of whether if title is specified or it is an alternate stylesheet.

Also fixed the bug that StyleSheet.title returns an empty string instead of null.

* LayoutTests/imported/w3c/web-platform-tests/css/cssom/stylesheet-title-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/ttwf-cssom-doc-ext-load-tree-order-expected.txt:
* LayoutTests/platform/glib/tables/mozilla_expected_failures/bugs/bug92868_1-expected.txt:
* LayoutTests/platform/ios/tables/mozilla_expected_failures/bugs/bug92868_1-expected.txt:
* LayoutTests/platform/mac/tables/mozilla_expected_failures/bugs/bug92868_1-expected.txt:
* LayoutTests/platform/win/tables/mozilla_expected_failures/bugs/bug92868_1-expected.txt:
* LayoutTests/platform/wincairo/tables/mozilla_expected_failures/bugs/bug92868_1-expected.txt:

* Source/WebCore/css/CSSStyleSheet.h:
(WebCore::XSLStyleSheet::title): Return null if m_title is an empty string.
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::collectActiveStyleSheets): This function now returns two vector's containing
the list of active stylesheets as well as ones for Document/ShadowRoot's styleSheets attribute.
(WebCore::Style::Scope::updateActiveStyleSheets):
* Source/WebCore/style/StyleScope.h:
(WebCore::Style::Scope::ActiveStyleSheetCollection):
* Source/WebCore/xml/XSLStyleSheet.h:
(WebCore::XSLStyleSheet::title): Return null.

Canonical link: https://commits.webkit.org/252781@main