Source/WebCore/xml/XSLStyleSheet.h
@@ -89,7 +89,7 @@ public:
     void setDisabled(bool b) override { m_isDisabled = b; }
     Node* ownerNode() const override { return m_ownerNode; }
     String href() const override { return m_originalURL; }
-    String title() const override { return emptyString(); }
+    String title() const override { return { }; }
 
     void clearOwnerNode() override { m_ownerNode = nullptr; }
     URL baseURL() const override { return m_finalURL; }
